...
    <string name="hint_tax_amount">Tax Amount</string>
    <string name="hint_select_reason">Select Reason</string>
    <string name="hint_date">Date</string>
    <string name="hint_tip_amount">Tip Amount</string>

    /***************** ALERT MESSAGES ***************/
    <string name="alert_enter_first_name">Please enter first name</string>
    <string name="alert_invalid_first_name_character">First name should only contain characters or white space.  </string>
    <string name="alert_enter_last_name">Please enter last name</string>
    <string name="alert_invalid_last_name_character">Last name should only contain characters or white space.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter the phone number</string>
    <string name="alert_invalid_phone_number">Phone number should be 10 to 13 digits</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
    <string name="alert_enter_user_name">Please enter username</string>
    <string name="alert_invalid_user_name_character">Username should contain number or characters.  </string>
    <string name="alert_enter_store_name">Please enter store name</string>
    <string name="alert_select_category">Please select category</string>
    <string name="alert_select_transaction_date">Please select transaction date</string>
    <string name="alert_enter_total_amount">Please enter total amount</string>
    <string name="alert_enter_tax_applied">Please enter tax applied</string>
    <string name="alert_invalid_tax_amount">Tax amount should be less than Total amount.</string>
    <string name="alert_min_user_name_length">Username minimum length should notbe %1$d character</string>
    <string name="alert_min_first_name_length">Name minimum length should be %1$d character</string>
    <string name="alert_min_last_name_length">Name minimum length should be %1$d character</string>
    <string name="alert_max_email_length">Email maximum length should be %1$d character</string>

    <string name="alert_enter_dob">Please enter date of birth</string>
    <string name="alert_select_street_address">Please select address</string>
    <string name="alert_select_state">Please select state</string>
    <string name="alert_enter_city">Please enter city</string>
    <string name="alert_enter_zip_code">Please enter zip code</string>
    <string name="alert_invalid_zip_code_character">Zip Code should contain number or characters.  </string>
    <string name="alert_min_zip_code_length">Zip Code minimum length should be %1$d character</string>
    <string name="alert_enter_otp">Please enter otp</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same</string>
    <string name="alert_enter_reason">Please enter your reason</string>
...


    <string name="primary_channel">TYST Channel</string>
    <string name="secondary_channel">Secondary Channel</string>
    <string name="msg_try_again">Oops.. Please try again later.</string>
    <string name="msg_capture_image">Capture image from camera or gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="reset_password">Reset Password</string>
    <string name="terms_n_conditions">Terms &amp; Conditions</string>
    <string name="resend_otp">Resend OTP</string>

...
