...
				android:orientation="vertical"
				android:padding="20sp">
				
				<!--Login Inputs-->
				
				<FrameLayout
					android:id="@+id/flProfile"
					android:layout_width="100sp"
					android:layout_height="100sp"
					android:layout_gravity="center"
					android:visibility="gone">
					
					<de.hdodenhof.circleimageview.CircleImageView
...
						android:layout_marginBottom="15sp"
						android:src="@drawable/selector_add_profile" />
				</FrameLayout>
				
				<!--First Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputFirstName"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_first_name"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
...
					android:maxLines="1"
					android:singleLine="true"
					android:visibility="@{config.firstname.shouldShow()?View.VISIBLE:View.GONE}" />
				
				<!--Last Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputLastName"
					style="@style/InputTextStyle"
					android:layout_marginTop="10sp"
					android:hint="@{config.lastname.getHint(@string/hint_last_name,@string/hint_last_name_optional)}"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
...
					android:singleLine="true"
					android:visibility="@{config.lastname.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_last_name" />
				
				<!--Email-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputEmail"
					style="@style/InputTextStyle"
					android:layout_gravity="center"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_email_address"
					android:inputType="textEmailAddress" />
				<!--                android:hint="@{config.email.getHint(@string/hint_email_address,@string/hint_email_address_optional)}"-->
				<!--                android:visibility="@{config.email.shouldShow()?View.VISIBLE:View.GONE}"-->
				
				<!--User Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputUserName"
					style="@style/InputTextStyle"
					android:layout_marginTop="10sp"
					android:hint="@{config.username.getHint(@string/hint_user_name,@string/hint_user_name_optional)}"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
...
					android:singleLine="true"
					android:visibility="@{config.username.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_user_name" />
				
				<!--Phone-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputPhoneNumber"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@{config.phonenumber.getHint(@string/hint_phone_number,@string/hint_phone_number_optional)}"
					android:inputType="phone"
					android:maxLength="@integer/mobile_number_max_length"
					android:visibility="@{config.phonenumber.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_phone_number" />
				
				
				<!--Address-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputAddress"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:focusable="false"
					android:hint="@{config.streetaddress.getHint(@string/hint_address,@string/hint_address_optional)}"
					android:inputType="text"
					android:visibility="@{config.streetaddress.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_address" />
				
				<!--City-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputCity"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:digits="@string/only_alphanumeric"
					android:hint="@{config.city.getHint(@string/hint_city,@string/hint_city_optional)}"
					android:inputType="text"
					android:maxLength="@integer/city_max_length"
...
						android:background="@color/white"
						android:spinnerMode="dropdown"
						android:visibility="visible" />
					
					<!--State-->
					<androidx.appcompat.widget.AppCompatEditText
						android:id="@+id/inputState"
						style="@style/InputTextStyle"
						android:layout_marginTop="8sp"
						android:focusable="false"
						android:hint="@{config.state.getHint(@string/hint_state,@string/hint_state_optional)}"
						android:inputType="text"
						tools:hint="@string/hint_state" />
...
						android:text="@string/agree_terms_and_condition"
						android:textColor="@color/white"
						android:textSize="14sp" />
				</LinearLayout>
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/btnCreate"
					style="@style/ButtonStyle"
					android:layout_width="match_parent"
					android:layout_marginTop="25sp"
					android:text="@string/sign_up" />
			
			</LinearLayout>
...
